--- a/Changes
+++ b/Changes
@@ -4,3 +4,6 @@ Revision history for Perl extension Tie::CheckVariables.
 	- original version; created by h2xs 1.23 with options
 		-b 5.6.1 -XA -n Tie::CheckVariables
 
+0.02  Mon Oct 02 11:19:52 2006
+    - added tests: Pod, Pod_Coverage, Manifest
+
