--- a/README
+++ b/README
@@ -1,16 +1,9 @@
-Tie-CheckVariables version 0.01
-===============================
+Tie-CheckVariables
+==================
 
-The README is used to introduce the module and provide instructions on
-how to install the module, any machine dependencies it may have (for
-example C compilers and installed libraries) and any other information
-that should be provided before the module is installed.
-
-A README file is required for CPAN modules since CPAN extracts the
-README file from a module distribution so that people browsing the
-archive can use it get an idea of the modules uses. It is usually a
-good idea to provide version information here so that people can
-decide whether fixes for the module are worth downloading.
+Tie::CheckVariables aims to simplify the checks of values. In many programs you
+want a variable to get only integer values or email addresses. With Tie::CheckVariables
+you don't have to check the value for each assignment.
 
 INSTALLATION
 
@@ -25,11 +18,9 @@ DEPENDENCIES
 
 This module requires these other modules and libraries:
 
-  blah blah blah
+  Carp
 
 COPYRIGHT AND LICENCE
-
-Put the correct copyright and licence information here.
 
 Copyright (C) 2006 by Renee Baecker
 
